fix(Listing Tile): OZF-891 The Listing Name extends behind the short org name on the quick view

--- a/app/styles/listing/_search-listing-tile.scss
+++ b/app/styles/listing/_search-listing-tile.scss
@@ -44,7 +44,7 @@
 
     .title {
         margin: 6px 0 1px 0;
-        width: 150px;
+        width: 100px;
         @include text-overflow();
     }
 
